# Anos-sama

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cogs/: anime.py  chatbot.py  cog_commands.py
