[tool.poetry]
name = "discordpy-bot-template-with-commands-extension"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.4"
beautifulsoup4 = "^4.11.1"
google = "^3.0.0"
pistonapi = "^1.0.1"
Flask = "^2.2.2"
wikipedia = "^1.4.0"
animec = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
